--- a/Valgapplikasjon/appsettings.json
+++ b/Valgapplikasjon/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
 
-  /*Bruker og API-nøkkel for Sendgrid*/
+  /*Bruker og API-nÃ¸kkel for Sendgrid*/
   "ExternalProviders": {
     "SendGrid": {
       "SendGridUser": "ValgappUSN",
@@ -16,8 +16,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ValgAppContext": "Data Source=valgapptest.database.windows.net;Initial Catalog=testdatabase;User ID=valgapplikasjon;Password=Festus-2000;Connect Timeout=30;Encrypt=True;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
-    "ValgAppContextProd": "Data Source=valgapptest.database.windows.net;Initial Catalog=testdatabase;User ID=valgapplikasjon;Password=Festus-2000;Connect Timeout=30;Encrypt=True;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
-    "AuthDbContextConnection": "Data Source=valgapptest.database.windows.net;Initial Catalog=testdatabase;User ID=valgapplikasjon;Password=Festus-2000;Connect Timeout=30;Encrypt=True;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False;MultipleActiveResultSets=True"
+    "ValgAppContext": "Data Source=valgapptest.database.windows.net;Initial Catalog=testdatabase;User ID=valgapplikasjon;Password="";Connect Timeout=30;Encrypt=True;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
+    "ValgAppContextProd": "Data Source=valgapptest.database.windows.net;Initial Catalog=testdatabase;User ID=valgapplikasjon;Password="";Connect Timeout=30;Encrypt=True;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
+    "AuthDbContextConnection": "Data Source=valgapptest.database.windows.net;Initial Catalog=testdatabase;User ID=valgapplikasjon;Password="";Connect Timeout=30;Encrypt=True;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False;MultipleActiveResultSets=True"
   }
 }
