--- a/Valgapplikasjon/appsettings.json
+++ b/Valgapplikasjon/appsettings.json
@@ -10,8 +10,8 @@
   /*Bruker og API-nøkkel for Sendgrid*/
   "ExternalProviders": {
     "SendGrid": {
-      "SendGridUser": "ValgappUSN",
-      "SendGridKey": "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"
+      "SendGridUser": ",
+      "SendGridKey": ""
     }
   },
   "AllowedHosts": "*",
